@@ -1,26 +1,0 @@
-;
-; rowl - 1st generation
-; Copyright (C) 2010 nineties
-;
-; $Id: rowl1-builtin.rlc 2011-10-03 10:50:09 nineties $
-;
-
-(import "rlvm-compile")
-(import "rowl1-types")
-
-(compile `object `(
-
-(import "rowl1-node")
-(import "rowl1-interp")
-(import "rowl1-compile")
-
-(extern fun setup_numeric)
-(extern fun setup_io)
-
-(export fun init_stdlib (env) (
-    (setup_builtin_compilers env)
-    (setup_numeric env)
-    (setup_io env)
-    ))
-
-    ))
