@@ -2,7 +2,7 @@
 ; rowl - 1st generation
 ; Copyright (C) 2010 nineties
 ;
-; $Id: rowl1-parse.rlc 2011-10-05 00:43:55 nineties $
+; $Id: rowl1-parse.rlc 2011-10-05 14:15:19 nineties $
 ;
 
 (import "rlvm-compile")
@@ -23,6 +23,7 @@
 ; Secondary ::= Primary
 ;             | Secondary '(' Expr, ... ')'
 ;             | Secondary '[' Expr, ... ']'
+;             | Secondary '{' Expr, ... '}'
 ; Primary   ::= Symbol
 ;             | Literal
 ;             | '(' Expr, ... ')'
