@@ -2,7 +2,7 @@
 ; rowl - 1st generation
 ; Copyright (C) 2010 nineties
 ;
-; $Id: rowl1-types.rlc 2011-10-05 02:44:45 nineties $
+; $Id: rowl1-types.rlc 2011-10-05 14:11:41 nineties $
 ;
 
 (import "config")
@@ -34,7 +34,7 @@
 
 (var ASSOC_MAX 25)
 (var ASSOC_PRIMARY 1)
-(var ASSOC_SECONDARY 3)
+(var ASSOC_SECONDARY 2)
 
 ; == node types ==
 (var SymbolE            0) ; SymbolE <name:string> <index:int>
