@@ -6,6 +6,8 @@
 	* lib/rowl/io.rlc, rowl1/rowl1-io.rlc : added several IO functions.
 	* rowl1/rowl1-node.rlc :
 	    - added new builtin object types InputFileStream and OutputFileStream.
+	* rowl1/rowl1-builtin.rlc : removed.
+	* several tiny bug fixes
 
 2011-10-04  nineties <nineties48@gmail.com>
 
